# pi-cluster

./: .ansible-lint.yaml  .gitignore  .kube-linter.yaml  .mise.toml  .pre-commit-config.yaml  .yamllint  .yamllint.yaml  CLAUDE.md  LICENSE  Makefile  README.md  ansible.cfg  backup_configuration.yml  create_vault_credentials.yml  external_services.yml  giscus.json  k3s_bootstrap.yml  k3s_deploy.yml  k3s_install.yml  k3s_reset.yml  k3s_start.yml  patch_grafana_dashboards.yml  pixi.toml  renovate.json  requirements.yml  setup_picluster.yml
ansible/: .ansible-lint  .yamllint  ansible.cfg  backup_configuration.yaml  backup_configuration.yml  configure_dns_authoritative.yml  configure_minio.yml  configure_pxe_server.yml  configure_static_ip_address.yml  configure_vault.yml  create_secret_files.yml  create_vault_credentials.yaml  create_vault_credentials.yml  deploy_minio.yml  deploy_monitoring_agent.yaml  deploy_monitoring_agent.yml  deploy_rustfs.yml  deploy_vault.yml  external_services.yaml  external_services.yml  gateway.yaml  gateway.yml  generate_gateway_tls_certificate.yml  initialise_gateway.yaml  install_utilities_localhost.yaml  install_utilities_localhost.yml  inventory.yaml  inventory.yml  k3s_bootstrap.yaml  k3s_bootstrap.yml  k3s_configuration.yml  k3s_deploy.yml  k3s_install.yaml  k3s_install.yml  k3s_reset.yaml  k3s_reset.yml  k3s_start.yaml  k3s_start.yml  k3s_stop.yaml  k3s_stop.yml  (+17 more)
ansible/.vault/: vault_pass.sh
ansible/files/: check_lh.sh
ansible/group_vars/: all.yaml  all.yml  cluster.yml  control.yaml  control.yml  external.yml  k3s_cluster.yaml  (+4 more)
(+2610 files in other folders)
