[project]
name = "pi-cluster-ansible"
version = "0.1.0"
description = "Ansible runtime environment for pi-cluster"
readme = "../README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "ansible-core==2.20.4",
    "ansible-lint>=26,<27",
    "pathspec<2",
    "yamllint==1.38.0",
    "kubernetes==35.0.0",
    "hvac==2.4.0",
    "certbot==5.4.0",
    "certbot-dns-ionos==2024.11.9",
]

[tool.uv]
package = false